--- a/lesson-5/css/style.css
+++ b/lesson-5/css/style.css
@@ -1,6 +1,6 @@
 /* посилання сформоване за допомогою плагіну Google Fonts */
 @import url('https://fonts.googleapis.com/css?family=Libre+Franklin:regular,500,600,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Archivo+Black:regular&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:regular&display=swap');
 
 /* підключення файлів зі шрифтами */
 @import url('fonts.css');
@@ -10,9 +10,8 @@
 
 body {
    background-color: #262626;
-   font-family: 'Archivo Black', sans-serif;
+   font-family: 'Montserrat', sans-serif;
    color: #e4e4e4;
-   font-size: 16px;
    word-spacing: 1px;
    text-align: justify;
 }
