--- a/lesson-8/css/style.css
+++ b/lesson-8/css/style.css
@@ -698,6 +698,7 @@ h4 {
    max-width: 295px;
    padding: 31px 32px 32px 90px;
    border: 1px solid #e3e3e3;
+   vertical-align: top;
 }
 
 .awards-list li + li {
