--- a/lesson-9/css/style.css
+++ b/lesson-9/css/style.css
@@ -125,7 +125,7 @@ a {
 }
 
 /* =====================home====================== */
-.hero-container > * {
+.home-container > * {
    margin-bottom: 30px;
 }
 
