--- a/lesson-9/css/style.css
+++ b/lesson-9/css/style.css
@@ -637,7 +637,7 @@ h1 {
 
 .about-card-title::before {
    content: '';
-   background: url('../img/jewelry-1.jpg') center / contain no-repeat;
+   background: url('../img/vector-about-section.svg') center / contain no-repeat;
    width: 27px;
    height: 27px;
    margin-right: 19px;
