--- a/lesson-12/css/style.css
+++ b/lesson-12/css/style.css
@@ -159,7 +159,6 @@ body {
    text-align: center;
 }
 
-
 /* ======================Practice================== */
 .accent {
    color: rgba(255, 255, 0, 0.8);
@@ -675,14 +674,14 @@ body {
 }
 
 .social-networks__list {
-   padding: 241px 107px;
+   position: absolute;
+   top: 243px;
+   left: 105px;
    font-size: 0;
-   text-align: center;
 }
 
 .social-networks__item {
    display: inline-block;
-   vertical-align: middle;
 }
 
 .social-networks__item:not(:last-child) {
@@ -690,8 +689,12 @@ body {
 }
 
 .social-networks__link {
+   width: 50px;
+   height: 50px;
    border-radius: 50%;
+   background-color: #40ddb6;
    transition: all 250ms;
+   overflow: hidden;
 }
 
 .social-networks__link:hover {
@@ -703,8 +706,8 @@ body {
 }
 
 .social-networks__img-wrapper {
-   width: 45px;
-   height: 45px;
+   width: 100%;
+   height: 100%;
 }
 
 .social-networks__img-wrapper img {
@@ -745,4 +748,3 @@ body {
 .model__position {
    text-transform: capitalize;
 }
-
