--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -101,6 +101,10 @@ body {
    margin-bottom: 20px;
 }
 
+.practice__item:last-child {
+   margin-bottom: 0;
+}
+
 .block {
    width: 100%;
    height: 100%;
