--- a/lesson-13/css/style.css
+++ b/lesson-13/css/style.css
@@ -368,6 +368,18 @@ body {
    background-color: crimson;
 }
 
+.car__decor-line {
+   position: absolute;
+   bottom: 29px;
+   left: 263px;
+   transform: rotate(-3deg);
+   width: 344px;
+   height: 10px;
+   box-shadow: 15px 4px 3px rgba(22, 22, 22, 0.2);
+   background-color: transparent;
+   border-radius: 50%;
+}
+
 .car__window-wrapper {
    z-index: 2;
    position: absolute;
@@ -400,28 +412,26 @@ body {
 .car__door-line {
    z-index: 2;
    position: absolute;
+   width: 2px;
    background-color: #1b1b1b;
 }
 
 .car__door-line--first {
-   top: 38px;
-   left: -64px;
-   width: 1px;
-   height: 71px;
+   top: 50px;
+   left: -83px;
+   height: 56px;
    transform: rotate(34deg);
 }
 
 .car__door-line--second {
    top: 3px;
-   left: 105px;
-   width: 1px;
-   height: 100px;
+   left: 104px;
+   height: 291px;
 }
 
 .car__door-line-third {
    top: -7px;
-   right: 86px;
-   width: 1px;
+   right: 85px;
    height: 113px;
    transform: rotate(-36deg);
 }
@@ -431,7 +441,7 @@ body {
    width: 980px;
    height: 245px;
    border-radius: 80% 4% 28% 10% / 58% 10% 33% 13%;
-   background-color: crimson;
+   background-color: #dc143c;
 }
 
 .car__headlight-wrapper {
@@ -495,7 +505,7 @@ body {
    height: 33px;
    border-top-right-radius: 50%;
    border-bottom-right-radius: 50%;
-   background-color: rgb(156, 14, 43);
+   background-color: #9c0e2b;
 }
 
 .car__door {
@@ -504,26 +514,54 @@ body {
 }
 
 .car__door--front {
-   bottom: 5%;
-   left: 32%;
-   width: 220px;
+   bottom: 12px;
+   left: 285px;
+   width: 247px;
    height: 290px;
    border-left: 2px solid #161616;
    border-bottom: 2px solid #161616;
-   border-right: 2px solid #161616;
    border-bottom-left-radius: 10px;
-   border-top-left-radius: 204px;
+   border-top-left-radius: 230px;
 }
 
 .car__door--back {
    transform: skew(-14deg);
    bottom: 12px;
-   left: 53%;
+   right: 258px;
    width: 200px;
    height: 205px;
    border-bottom: 2px solid #161616;
    border-right: 2px solid #161616;
    border-radius: 0% 10% 71% 100% / 69% 11% 140% 0%;
+}
+
+.car__handle-wrapper {
+   position: absolute;
+   top: 55px;
+   width: 50px;
+   height: 25px;
+   border-radius: 50%;
+   background: rgba(220, 20, 60, 1);
+   box-shadow: inset 0px 0px 13px rgba(5, 5, 5, 1);
+   overflow: hidden;
+}
+
+.car__handle {
+   position: absolute;
+   top: 50%;
+   transform: translateY(-50%);
+   width: 50px;
+   height: 10px;
+   background: rgba(220, 20, 60, 1);
+   box-shadow: inset 0px 0px 3px rgba(5, 5, 5, 0.5);
+}
+
+.car__handle-wrapper--front {
+   left: 452px;
+}
+
+.car__handle-wrapper--back {
+   right: 253px;
 }
 
 .car__complete-with-wheel {
@@ -566,7 +604,7 @@ body {
 }
 
 .car__niche-for-wheel-wrapper--back {
-   border-radius: 0% 0% 100% 0% / 0% 0% 14% 0%;
+   border-radius: 0% 0% 100% 0% / 0% 0% 18% 0%;
 }
 
 .car__niche-for-wheel {
@@ -694,4 +732,118 @@ body {
    height: 45px;
    background: rgb(246, 242, 242);
    background: radial-gradient(circle, #dc143c 57%, rgba(222, 222, 223, 1) 65%);
+}
+
+.car__mirror-holder {
+   z-index: 4;
+   position: absolute;
+   top: 35px;
+   left: 329px;
+   width: 18px;
+   height: 30px;
+   transform: rotate(13deg);
+   border-bottom-left-radius: 40%;
+   border-bottom-right-radius: 40%;
+   background-color: #161616;
+}
+
+.car__back-of-mirror {
+   z-index: 4;
+   position: absolute;
+   top: 8px;
+   left: 326px;
+   width: 30px;
+   height: 30px;
+   border-radius: 100% 0% 2% 98% / 47% 100% 0% 53%;
+   background-color: #dc143c;
+}
+
+.car__back-of-mirror::after {
+   content: '';
+   z-index: 4;
+   position: absolute;
+   top: 0;
+   left: 30px;
+   width: 5px;
+   height: 30px;
+   background-color: #161616;
+}
+
+.car__fuel-tank-cap-wrapper {
+   position: absolute;
+   top: 37px;
+   right: 130px;
+   padding: 3px 7px;
+   border-radius: 4px;
+   border: 1px solid #161616;
+}
+
+.car__fuel-tank-cap {
+   width: 30px;
+   height: 30px;
+   background: url('../img/mushroom.svg') center / contain no-repeat;
+}
+
+.car__back-headlight-wrapper {
+   position: absolute;
+   top: 9px;
+   right: -4px;
+   width: 60px;
+   height: 60px;
+   border-radius: 63% 37% 42% 63% / 49% 50% 55% 52%;
+   background-color: #dc143c;
+}
+
+.car__back-headlight {
+   position: absolute;
+   top: 7%;
+   right: 0px;
+   width: 60px;
+   height: 45px;
+   border-radius: 63% 37% 42% 63% / 49% 50% 55% 52%;
+   background: rgb(5, 5, 5);
+   background: linear-gradient(270deg, rgba(5, 5, 5, 1) 0%, rgba(220, 20, 20, 1) 88%);
+}
+
+.car__back-headlight:after {
+   content: '';
+   position: absolute;
+   top: 8%;
+   right: 4px;
+   width: 50px;
+   height: 20px;
+   background-color: #c8c7c3;
+   border-radius: 100% 51% 50% 51% / 100% 100% 17% 24%;
+   background: rgb(236, 231, 231);
+   box-shadow: inset 7px -2px 11px rgb(5, 5, 5, 0.5);
+}
+
+.car__back-bumper {
+   position: absolute;
+   bottom: 60px;
+   right: -8px;
+   width: 60px;
+   height: 85px;
+   border-radius: 63% 37% 42% 63% / 49% 50% 55% 52%;
+   background-color: #dc143c;
+}
+.car__back-bumper-decor {
+   position: absolute;
+   bottom: 68px;
+   right: -8px;
+   transform: rotate(-18deg);
+   width: 96px;
+   height: 30px;
+   box-shadow: -6px -2px 10px rgb(5, 5, 5, 0.1);
+}
+
+.car__back-bumper-headlight {
+   position: absolute;
+   top: 42px;
+   right: 1px;
+   width: 20px;
+   height: 5px;
+   background-color: #861010;
+   border-radius: 3px;
+   transform: rotate(-16deg);
 }
