--- a/lesson-14/css/style.css
+++ b/lesson-14/css/style.css
@@ -104,7 +104,7 @@ body {
 }
 
 .practice__item > * {
-   padding: 30px 30px 30px 30px;
+   padding: 30px 40px;
    display: inline-block;
    vertical-align: middle;
    font-size: 14px;
@@ -226,7 +226,428 @@ body {
    transform: translateX(100%);
 }
 
-.clock-wrapper img {
+.clock-wrapper {
+   position: relative;
    width: 300px;
    height: 300px;
+}
+
+.clock-wrapper::before {
+   content: '';
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -100%) rotate(330deg);
+   transform-origin: bottom;
+   width: 8px;
+   height: 95px;
+   background-color: white;
+}
+
+.clock-wrapper::after {
+   content: '';
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -100%) rotate(0deg);
+   transform-origin: bottom;
+   width: 5px;
+   height: 142px;
+   background-color: white;
+
+   transition-property: transform;
+   transition-duration: 100ms;
+   transition-timing-function: steps(60, start);
+}
+
+.clock-wrapper img {
+   width: 100%;
+   height: 100%;
+}
+
+.clock-wrapper:hover::after {
+   transition-duration: 60s;
+   transform: translate(-50%, -100%) rotate(360deg);
+}
+
+.practice__example--transition-timing-function-easy,
+.practice__example--transition-timing-function-linear,
+.practice__example--transition-timing-function-cubic-bezier {
+   transform: translateX(0);
+   transition-property: transform;
+   transition-duration: 1000ms;
+}
+
+.practice__example--transition-timing-function-easy {
+   transition-timing-function: ease;
+}
+
+.practice__example--transition-timing-function-linear {
+   transition-timing-function: linear;
+}
+
+.practice__example--transition-timing-function-cubic-bezier {
+   transition-timing-function: cubic-bezier(0.39, -0.42, 0.47, 1.35);
+}
+
+.practice__example-wrapper:hover > .practice__example--transition-timing-function-easy,
+.practice__example-wrapper:hover > .practice__example--transition-timing-function-linear,
+.practice__example-wrapper:hover > .practice__example--transition-timing-function-cubic-bezier {
+   transform: translateX(200%);
+}
+
+.practice__example--transition-universal-all {
+   transition: all 500ms ease-in;
+}
+
+.practice__example--transition-universal-one {
+   transition: transform 500ms cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.practice__example--transition-universal-more-one {
+   transition: transform 500ms linear,
+      background-color 500ms cubic-bezier(0.075, 0.82, 0.165, 1) 600ms;
+}
+
+.practice__example-wrapper:hover > .practice__example--transition-universal-all,
+.practice__example-wrapper:hover > .practice__example--transition-universal-one,
+.practice__example-wrapper:hover > .practice__example--transition-universal-more-one {
+   background-color: crimson;
+   transform: translateX(100%) scale(1.2);
+}
+
+/* animation */
+@keyframes rotate {
+   0% {
+      transform: rotate(0deg);
+      background-color: darkorange;
+   }
+   100% {
+      transform: rotate(320deg);
+      background-color: darkorange;
+   }
+}
+
+@keyframes rotate-full {
+   0% {
+      transform: rotate(0deg);
+   }
+   100% {
+      transform: rotate(360deg);
+   }
+}
+
+@keyframes transition-x {
+   0% {
+      transform: translateX(-200%);
+   }
+   100% {
+      transform: translateX(400%);
+   }
+}
+
+@keyframes transition-x-second {
+   0% {
+      transform: translateX(0%);
+   }
+   100% {
+      transform: translateX(250%);
+   }
+}
+
+@keyframes scale {
+   0% {
+      transform: scale(0.1);
+      border-radius: 10px;
+      background-color: rgb(0, 139, 132);
+   }
+   10% {
+      transform: scale(0.3);
+   }
+   20% {
+      transform: scale(0.5, 0.8);
+   }
+   30% {
+      transform: scale(0.3);
+   }
+   40% {
+      transform: scale(0.8, 0.5);
+   }
+   50% {
+      transform: scale(0.3);
+   }
+   60% {
+      transform: scale(0.8, 1.3);
+   }
+   70% {
+      transform: scale(0.3);
+   }
+   80% {
+      transform: scale(1.3, 0.8);
+   }
+   90% {
+      transform: scale(0.3);
+   }
+   100% {
+      transform: scale(1);
+      border-radius: 0px;
+      background-color: crimson;
+   }
+}
+
+@keyframes left-item {
+   0% {
+      transform: rotate(45deg);
+   }
+   50% {
+      transform: rotate(0deg);
+   }
+   100% {
+      transform: rotate(0deg);
+   }
+}
+
+@keyframes right-item {
+   0% {
+      transform: rotate(0deg);
+   }
+   50% {
+      transform: rotate(0deg);
+   }
+   100% {
+      transform: rotate(-45deg);
+   }
+}
+
+@keyframes left-bg {
+   0% {
+      transform: rotate(-45deg);
+   }
+   50% {
+      transform: rotate(0deg);
+   }
+   100% {
+      transform: rotate(0deg);
+   }
+}
+
+@keyframes right-bg {
+   0% {
+      transform: rotate(0deg);
+   }
+   50% {
+      transform: rotate(0deg);
+   }
+   100% {
+      transform: rotate(45deg);
+   }
+}
+
+.practice__item--paddihg-left {
+   padding-left: 40px;
+}
+
+.practice__example--animation-rotate {
+   animation-name: rotate;
+   animation-duration: 1500ms;
+   animation-timing-function: ease;
+   animation-iteration-count: 2;
+}
+
+.practice__example--animation-rotate-infinite {
+   animation-name: rotate-full;
+   animation-duration: 1500ms;
+   animation-timing-function: cubic-bezier(0.6, -0.28, 0.735, 0.045);
+   animation-iteration-count: infinite;
+}
+
+.practice__example-wrapper--animation-direction {
+   overflow: hidden;
+}
+
+.practice__example--animation-direction-normal,
+.practice__example--animation-direction-reverse {
+   animation-name: transition-x;
+   animation-duration: 1500ms;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+   animation-direction: normal;
+}
+
+.practice__example--animation-direction-reverse {
+   animation-direction: reverse;
+}
+
+.practice__example--animation-direction-alternate,
+.practice__example--animation-direction-alternate-reverse {
+   animation-name: transition-x-second;
+   animation-duration: 1000ms;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+   animation-play-state: running;
+}
+
+.practice__example--animation-direction-alternate {
+   animation-direction: alternate;
+}
+
+.practice__example--animation-direction-alternate-reverse {
+   animation-direction: alternate-reverse;
+}
+
+.practice__example--animation-play-state {
+   animation-name: transition-x;
+   animation-duration: 500ms;
+   animation-timing-function: linear;
+   animation-iteration-count: infinite;
+   animation-play-state: running;
+   animation-direction: normal;
+}
+
+.practice__example-wrapper--animation-play-state {
+   overflow: hidden;
+}
+
+.practice__example--animation-play-state:hover {
+   animation-play-state: paused;
+}
+
+.practice__example--animation-delay {
+   animation-name: rotate-full;
+   animation-duration: 1000ms;
+   animation-timing-function: ease;
+   animation-iteration-count: infinite;
+   animation-direction: alternate-reverse;
+   animation-delay: 1000ms;
+}
+
+.practice__example--animation-fill-mode-none {
+   animation-name: scale;
+   animation-duration: 1200ms;
+   animation-timing-function: ease;
+   animation-direction: normal;
+   animation-fill-mode: none;
+   animation-delay: 2000ms;
+}
+
+.practice__example--animation-fill-mode-forwards {
+   background-color: chocolate;
+   animation-name: scale;
+   animation-duration: 1200ms;
+   animation-timing-function: ease;
+   animation-direction: normal;
+   animation-fill-mode: forwards;
+   animation-delay: 2000ms;
+}
+
+.practice__example--animation-fill-mode-backwards {
+   background-color: chocolate;
+   animation-name: scale;
+   animation-duration: 1200ms;
+   animation-timing-function: ease;
+   animation-direction: normal;
+   animation-fill-mode: backwards;
+   animation-delay: 2000ms;
+}
+
+.practice__example--animation-fill-mode-both {
+   background-color: chocolate;
+   animation-name: scale;
+   animation-duration: 1200ms;
+   animation-timing-function: ease;
+   animation-direction: normal;
+   animation-fill-mode: both;
+   animation-delay: 2000ms;
+}
+
+.practice__example--animation-universal {
+   background-color: chocolate;
+   animation: scale 1000ms ease forwards 100ms;
+}
+
+/* newton */
+.practice__example-wrapper--block,
+.practice__code--block {
+   display: block;
+   width: 100%;
+}
+
+.practice__example-newton {
+   position: relative;
+   width: 200px;
+   height: 200px;
+   margin: 0 auto;
+   border-top: 10px solid rgba(136, 132, 132, 1);
+}
+
+.newton__item {
+   position: absolute;
+   top: -2px;
+   height: 100%;
+   width: 25%;
+   perspective: 1000px;
+   transform-origin: top;
+}
+
+.newton:hover .newton__item {
+   animation-play-state: paused;
+}
+
+.newton:hover .newton__item::after {
+   animation-play-state: paused;
+}
+
+.newton__item::before {
+   content: '';
+   position: absolute;
+   width: 5px;
+   background-color: rgba(136, 132, 132, 1);
+   height: 100%;
+   left: 50%;
+   transform: translateX(-50%);
+}
+
+.newton__item::after {
+   content: '';
+   position: absolute;
+   bottom: 0;
+   width: 50px;
+   height: 50px;
+   background: rgb(136, 132, 132);
+   background: linear-gradient(
+      181deg,
+      rgba(136, 132, 132, 1) 0%,
+      rgba(236, 231, 231, 1) 45%,
+      rgb(255, 255, 255) 50%,
+      rgba(236, 231, 231, 1) 55%,
+      rgba(136, 132, 132, 1) 100%
+   );
+   box-shadow: inset 0px 0px 20px rgba(136, 132, 132, 1);
+   border-radius: 50%;
+}
+
+.newton__item:nth-child(1) {
+   left: 0;
+   animation: left-item 1000ms infinite ease-in alternate;
+}
+
+.newton__item:nth-child(1)::after {
+   animation: left-bg 1000ms infinite ease-in alternate;
+}
+
+.newton__item:nth-child(2) {
+   left: 25%;
+}
+
+.newton__item:nth-child(3) {
+   left: 50%;
+}
+
+.newton__item:nth-child(4) {
+   right: 0;
+   animation: right-item 1000ms infinite ease-out alternate;
+}
+
+.newton__item:nth-child(4)::after {
+   animation: right-bg 1000ms infinite ease-out alternate;
 }
