--- a/lesson-15/css/models.css
+++ b/lesson-15/css/models.css
@@ -38,7 +38,7 @@
    border-bottom: 1px solid #bebcbd;
 }
 
-.models-header--margin-bottom {
+.models-header--mb {
    margin-bottom: 100px;
 }
 
@@ -224,14 +224,13 @@
    outline: 1px solid #8a33fd;
 }
 
-/* .categories,
-.wishlist,
-.orders {
-   padding-top: 100px;
-} */
+.categories--mb,
+.wishlist--mb {
+   margin-bottom: 100px;
+}
 
-.orders {
-   padding-bottom: 50px;
+.orders--mb {
+   margin-bottom: 50px;
 }
 
 .section-title {
