--- a/lesson-16/css/style.css
+++ b/lesson-16/css/style.css
@@ -430,6 +430,10 @@ input[type='number']::-webkit-outer-spin-button {
    margin-bottom: 10px;
 }
 
+.check-out__line {
+   position: relative;
+}
+
 .models-label {
    display: block;
    font-weight: 600;
