--- a/lesson-16/css/style.css
+++ b/lesson-16/css/style.css
@@ -1039,6 +1039,19 @@ input[type='number']::-webkit-outer-spin-button {
    background-color: #6b77e5;
    width: max-content;
    margin: 0 auto;
+
+   transition: all 300ms linear;
+}
+
+.call-back__button:hover {
+   color: #6b77e5;
+   background-color: #ffffff;
+}
+
+.call-back__button:focus {
+   color: #6b77e5;
+   background-color: #ffffff;
+   outline: 1px solid #373e78;
 }
 
 /* ---------------- margin-bottom: 0; for last-child */
