--- a/lesson-17/css/style.css
+++ b/lesson-17/css/style.css
@@ -105,7 +105,14 @@
    flex: 1 1 100%;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 500px) {
+   .first-model__column {
+      padding: 0 24px;
+      flex: 0 1 50%;
+   }
+}
+
+@media (min-width: 900px) {
    .first-model__column {
       padding: 0 24px;
       flex: 1 1 33.3333%;
@@ -147,9 +154,15 @@
 .first-model__text-link {
    position: relative;
    font-weight: 800;
-   font-size: 16px;
+   font-size: 20px;
    line-height: 1.5;
    color: #f55529;
+}
+
+@media (min-width: 1202.98px) {
+   .first-model__text-link {
+      font-size: 16px;
+   }
 }
 
 .first-model__text-link::after {
@@ -163,13 +176,6 @@
    transform: scaleX(0);
 
    transition: all 300ms linear;
-}
-
-.first-model__text-link {
-   font-weight: 800;
-   font-size: 16px;
-   line-height: 1.5;
-   color: #f55529;
 }
 
 .first-model__link:hover img {
