--- a/lesson-17/css/style.css
+++ b/lesson-17/css/style.css
@@ -50,6 +50,26 @@
    text-align: center;
 }
 
+.first-model__container {
+   position: relative;
+}
+
+.first-model__decor {
+   display: none;
+}
+
+@media (min-width: 1203px) {
+   .first-model__decor {
+      display: block;
+      position: absolute;
+      right: -26%;
+      bottom: -13%;
+      width: 341px;
+      height: 419px;
+      background: url('../img/popular-product/decor-bg.webp');
+   }
+}
+
 .first-model__container > * {
    margin-bottom: 30px;
 }
@@ -154,9 +174,15 @@
 .first-model__text-link {
    position: relative;
    font-weight: 800;
-   font-size: 20px;
+   font-size: 22px;
    line-height: 1.5;
    color: #f55529;
+}
+
+@media (min-width: 768px) {
+   .first-model__text-link {
+      font-size: 20px;
+   }
 }
 
 @media (min-width: 1202.98px) {
@@ -178,9 +204,25 @@
    transition: all 300ms linear;
 }
 
-.first-model__link:hover img {
+.first-model__link img {
+   width: 33px;
+   height: 33px;
    object-fit: cover;
    transition: all 300ms;
+}
+
+@media (min-width: 768px) {
+   .first-model__link img {
+      width: 30px;
+      height: 30px;
+   }
+}
+
+@media (min-width: 1202.98px) {
+   .first-model__link img {
+      width: 24px;
+      height: 24px;
+   }
 }
 
 @media (any-hover: hover) {
