--- a/lesson-17/css/style.css
+++ b/lesson-17/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Inter:regular,800&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Ephesis:regular&display=swap');
 @import url('https://fonts.googleapis.com/css?family=DM+Serif+Text:regular&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Cormorant+Infant:700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:500&display=swap');
 @import url('fonts.css');
 @import url('reset.css');
 
@@ -82,26 +84,26 @@
    margin-bottom: 30px;
 }
 
-.first-model__title {
+.title {
    font-family: 'DM Serif Text', serif;
    font-weight: 400;
    text-transform: capitalize;
 }
 
-.first-model__title--section {
+.title--section {
    font-size: 40px;
    --width: 100%;
    margin-bottom: calc(var(--width) / 57);
 }
 
 @media (min-width: 768px) {
-   .first-model__title--section {
+   .title--section {
       font-size: 50px;
    }
 }
 
 @media (min-width: 1202.98px) {
-   .first-model__title--section {
+   .title--section {
       font-size: 58px;
       margin-bottom: 21px;
    }
@@ -246,10 +248,133 @@
    outline: 2px solid #f55529;
 }
 
+.second-model {
+   font-family: 'Cormorant Infant', serif;
+   font-size: 24px;
+   font-weight: 700;
+   line-height: 1.4;
+}
+
+.second-model__container > * {
+   margin-bottom: 30px;
+}
+
+@media (min-width: 600px) {
+   .second-model__container > * {
+      --width: 100%;
+      margin-bottom: calc(var(--width) / 19);
+   }
+}
+
+.second-model__title {
+   text-align: center;
+   margin-bottom: 27px;
+}
+
+.second-model__text {
+   text-align: center;
+   color: #818181;
+}
+
+.second-model__list {
+   display: flex;
+   flex-wrap: wrap;
+   margin-left: -15px;
+   margin-right: -15px;
+   row-gap: 30px;
+}
+
+.second-model__column {
+   padding: 0 15px;
+   flex: 1 1 100%;
+}
+
+@media (min-width: 500px) {
+   .second-model__column {
+      flex: 0 0 50%;
+      padding: 0 15px 10px 15px;
+   }
+}
+
+@media (min-width: 900px) {
+   .second-model__column {
+      flex: 0 0 25%;
+      padding: 0 15px 10px 15px;
+   }
+}
+
+.second-model__item {
+   padding-bottom: 10px;
+}
+
+.second-model__item > * {
+   margin-bottom: 17px;
+}
+
+.second-model__img {
+   width: 100%;
+   height: 100%;
+   aspect-ratio: 271 / 270;
+   object-fit: cover;
+
+   transition: all 300ms linear;
+}
+
+@media (any-hover: hover) {
+   .second-model__img-link:hover .second-model__img {
+      transform: scale(1.07);
+   }
+}
+
+.second-model__card-title {
+   margin-bottom: 4px;
+}
+
+.second-model__title-link {
+   transition: all 300ms linear;
+}
+
+@media (any-hover: hover) {
+   .second-model__title-link:hover {
+      color: #ff7a49;
+   }
+}
+
+.second-model__img-link:focus,
+.second-model__title-link:focus {
+   outline: 2px solid rgba(0, 0, 0, 0.3);
+}
+
+.second-model__more-link {
+   display: block;
+   font-family: 'Ubuntu', sans-serif;
+   font-weight: 500;
+   font-size: 16px;
+   width: max-content;
+   padding: 12px 42px;
+   margin-left: auto;
+   margin-right: auto;
+   color: #ffffff;
+   background-color: #ff7a49;
+   border: 1px solid #ff7a49;
+
+   transition: all 300ms linear;
+}
+
+@media (any-hover: hover) {
+   .second-model__more-link:hover {
+      color: #ff7a49;
+      background-color: #ffffff;
+   }
+}
+
 /* ======================= margin-bottom: 0; ===================== */
 .wrapper > *:last-child,
 .page > *:last-child,
 .first-model__container > *:last-child,
-.first-model__item > *:last-child {
+.first-model__item > *:last-child,
+.title--section:last-child,
+.second-model__container > *:last-child,
+.second-model__item > *:last-child {
    margin-bottom: 0;
 }
