--- a/lesson-17/css/style.css
+++ b/lesson-17/css/style.css
@@ -56,11 +56,23 @@
    position: relative;
 }
 
+.first-model__container > * {
+   --width: 100%;
+   margin-bottom: calc(var(--width) / 24);
+}
+
+@media (min-width: 1203px) {
+   .first-model__container > * {
+      margin-bottom: 50px;
+   }
+}
+
 .first-model__decor {
    display: none;
    position: absolute;
    width: 341px;
    height: 419px;
+   margin-bottom: 0;
    background: url('../img/popular-product/decor-bg.webp');
 }
 
@@ -80,54 +92,49 @@
    }
 }
 
-.first-model__container > * {
-   margin-bottom: 30px;
-}
-
 .title {
    font-family: 'DM Serif Text', serif;
    font-weight: 400;
    text-transform: capitalize;
+   text-align: center;
 }
 
-.title--section {
+.title-section {
    font-size: 40px;
    --width: 100%;
    margin-bottom: calc(var(--width) / 57);
 }
 
 @media (min-width: 768px) {
-   .title--section {
+   .title-section {
       font-size: 50px;
    }
 }
 
 @media (min-width: 1202.98px) {
-   .title--section {
+   .title-section {
       font-size: 58px;
       margin-bottom: 21px;
    }
 }
 
+.first-model__title {
+   text-align: start;
+}
+
 .first-model__text {
    font-family: 'Inter', sans-serif;
    line-height: 1.8;
-   --width: 100%;
-   margin-bottom: calc(var(--width) / 24);
    color: #606060;
 }
 
-@media (min-width: 1202.98px) {
-   .first-model__text {
-      margin-bottom: 50px;
-   }
-}
-
 .first-model__list {
+   position: relative;
    display: flex;
    flex-wrap: wrap;
    row-gap: 24px;
-   margin: 0 -24px;
+   margin-left: -24px;
+   margin-right: -24px;
 }
 
 .first-model__column {
@@ -248,19 +255,22 @@
    outline: 2px solid #f55529;
 }
 
-.second-model {
+.second-model,
+.third-model {
    font-family: 'Cormorant Infant', serif;
    font-size: 24px;
    font-weight: 700;
    line-height: 1.4;
 }
 
-.second-model__container > * {
+.second-model__container > *,
+.third-model__container > * {
    margin-bottom: 30px;
 }
 
 @media (min-width: 600px) {
-   .second-model__container > * {
+   .second-model__container > *,
+   .third-model__container > * {
       --width: 100%;
       margin-bottom: calc(var(--width) / 19);
    }
@@ -271,12 +281,14 @@
    margin-bottom: 27px;
 }
 
-.second-model__text {
+.second-model__text,
+.third-model__text {
    text-align: center;
    color: #818181;
 }
 
-.second-model__list {
+.second-model__list,
+.third-model__list {
    display: flex;
    flex-wrap: wrap;
    margin-left: -15px;
@@ -284,64 +296,64 @@
    row-gap: 30px;
 }
 
-.second-model__column {
+.producs-list__column {
    padding: 0 15px;
    flex: 1 1 100%;
 }
 
 @media (min-width: 500px) {
-   .second-model__column {
+   .producs-list__column {
       flex: 0 0 50%;
       padding: 0 15px 10px 15px;
    }
 }
 
 @media (min-width: 900px) {
-   .second-model__column {
+   .producs-list__column {
       flex: 0 0 25%;
       padding: 0 15px 10px 15px;
    }
 }
 
-.second-model__item {
+.producs-list__item {
    padding-bottom: 10px;
 }
 
-.second-model__item > * {
+.producs-list__item > * {
    margin-bottom: 17px;
 }
 
-.second-model__img {
+.producs-list__img {
    width: 100%;
    height: 100%;
-   aspect-ratio: 271 / 270;
+   aspect-ratio: 270 / 270;
    object-fit: cover;
 
    transition: all 300ms linear;
 }
 
 @media (any-hover: hover) {
-   .second-model__img-link:hover .second-model__img {
+   .producs-list__img-link:hover .producs-list__img {
       transform: scale(1.07);
    }
 }
 
-.second-model__card-title {
+.producs-list__title {
    margin-bottom: 4px;
 }
 
-.second-model__title-link {
+.producs-list__title-link {
    transition: all 300ms linear;
 }
 
 @media (any-hover: hover) {
-   .second-model__title-link:hover {
+   .producs-list__title-link:hover {
       color: #ff7a49;
    }
 }
 
-.second-model__img-link:focus,
-.second-model__title-link:focus {
+.producs-list__img-link:focus,
+.producs-list__title-link:focus {
    outline: 2px solid rgba(0, 0, 0, 0.3);
 }
 
@@ -368,13 +380,19 @@
    }
 }
 
+.producs-list__img-link--b-radius {
+   overflow: hidden;
+   border-radius: 5px;
+}
+
 /* ======================= margin-bottom: 0; ===================== */
 .wrapper > *:last-child,
 .page > *:last-child,
 .first-model__container > *:last-child,
 .first-model__item > *:last-child,
-.title--section:last-child,
+.title-section:last-child,
 .second-model__container > *:last-child,
-.second-model__item > *:last-child {
+.second-model__item > *:last-child,
+.third-model__container > *:last-child {
    margin-bottom: 0;
 }
