--- a/lesson-7/css/style.css
+++ b/lesson-7/css/style.css
@@ -147,6 +147,11 @@ a {
    margin-left: 30px;
 }
 
+.images-content .image-block + .image-block .image-wrapper {
+   width: 307px;
+   height: 500px;
+}
+
 .images-content .image-wrapper {
    width: 177px;
    height: 336px;
@@ -154,14 +159,9 @@ a {
    border: 1px solid #502203;
 }
 
-.images-content .image-block + .image-block .image-wrapper {
-   width: 307px;
-   height: 500px;
-}
-
 .about-section img {
-   width: 100%;
-   height: 100%;
+   max-width: 100%;
+   max-height: 100%;
    border-radius: 235px;
    margin-left: -10px;
    margin-top: 14px;
